Release BillManager v4.6.0 (#81)
